--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-@import url("styles/header.css");
-@import url("styles/banner.css");
-@import url("styles/carrossel.css");
-@import url("styles/topicos.css");
-@import url("styles/contato.css");
-@import url("styles/rodapé.css");
-
 /* Definindo cores principais */
 :root {
     --cor-primaria: #ff0000; /* Vermelho da F1 */
@@ -23,6 +16,7 @@ body {
     padding: 0;
 }
 
+/* Cabeçalho */
 header {
     background-color: var(--cor-primaria);
     color: var(--cor-terciaria);
@@ -85,6 +79,9 @@ header {
     font-size: 1rem;
     border-radius: 5px;
     border: 2px solid var(--cor-secundaria);
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 /* Carrossel */
@@ -101,7 +98,9 @@ header {
 
 .swiper-slide img {
     width: 100%;
+    height: auto;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .card {
@@ -120,6 +119,7 @@ header {
 
 .card__descrição img {
     max-width: 150px;
+    height: auto;
 }
 
 .descrição__titulo {
